<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/main_imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:layout_marginTop="14dp"
        app:srcCompat="@drawable/logo_virtu" />

    <TextView
        android:id="@+id/main_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="50dp"
        android:gravity="center_horizontal"
        android:text="@string/bienvenue_dans_virtusport"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />

    <Button
        android:id="@+id/main_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="60dp"
        android:background="@drawable/button_shape"
        android:padding="15dp"
        android:text="@string/s_inscrire"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/main_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="12dp"
        android:background="@drawable/button_shape"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/se_connecter"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


</LinearLayout>
