<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".OutsideActivity">

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="15dp"
        android:gravity="center_horizontal"
        android:text="Questionnaire"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/outside_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="15dp"
        android:gravity="center_horizontal"
        android:text="@string/outside_question"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/outside_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="55dp"
        android:minWidth="350dp"
        android:theme="@style/Button.Purple"
        android:background="@drawable/button_shape_two"
        android:minHeight="48dp"
        android:text="@string/yes"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/outside_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="55dp"
        android:minWidth="350dp"
        android:backgroundTint="@color/purple"
        android:background="@drawable/button_shape"
        android:minHeight="48dp"
        android:text="@string/no"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/outside_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="65dp"

        android:background="@drawable/button_shape"
        android:minHeight="48dp"
        android:text="Suivant"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>