<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity"
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/main_imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:layout_marginTop="12dp"
        app:srcCompat="@drawable/logo_virtu" />


    <TextView
        android:id="@+id/home_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="50dp"
        android:gravity="center_horizontal"
        android:text="@string/bienvenue_ania"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/cardview_dark_background">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:id="@+id/your_objective"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="250dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="15dp"
            android:gravity="center"
            android:text="@string/ton_objectif"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    <TextView
        android:id="@+id/objective_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="25dp"
        android:gravity="center"
        android:text="0%"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        />
        </LinearLayout>

        <ImageView
            android:id="@+id/illustration"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:layout_marginTop="12dp"
            app:srcCompat="@drawable/fitness"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/playlists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="25dp"
        android:gravity="center_horizontal"
        android:text="Tes playlists"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:layout_marginVertical="145dp"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:menu="@navigation/bottom_nav_menu" />
</LinearLayout>
