<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".RegisterSecondActivty">

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="15dp"
        android:gravity="center_horizontal"
        android:text="Inscription"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/gender_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="15dp"
        android:gravity="center_horizontal"
        android:text="@string/gender_question"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.190" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <Button
            android:id="@+id/man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/button_shape"
            android:minHeight="48dp"
            android:text="@string/gender_woman"
            android:textColor="@android:color/white"
            android:textSize="20sp"
 />

        <Button
            android:id="@+id/woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/button_shape"
            android:minHeight="48dp"
            android:text="@string/gender_man"
            android:textColor="@android:color/white"
            android:textSize="20sp"
  />
    </LinearLayout>

    <TextView
        android:id="@+id/height_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="15dp"
        android:gravity="center_horizontal"
        android:text="@string/height_question"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.400" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.500">

        <EditText
            android:id="@+id/register_height"
            android:layout_width="100dp"
            android:layout_height="wrap_content"

            android:layout_margin="15dp"
            android:ems="10"
            android:hint="..."
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/height_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="15dp"
            android:gravity="center_horizontal"
            android:text="cm"
            android:textColor="@color/white"
            android:textSize="25dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/weight_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="15dp"
        android:gravity="center_horizontal"
        android:text="Ton poids"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.600" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.700">

        <EditText
            android:id="@+id/register_weight"
            android:layout_width="100dp"
            android:layout_height="wrap_content"

            android:layout_margin="15dp"
            android:ems="10"
            android:hint="..."
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/weight_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="15dp"
            android:gravity="center_horizontal"
            android:text="kg"
            android:textColor="@color/white"
            android:textSize="25dp" />
    </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.900">
            tools:context=".RegisterSecondActivty"

    <Button
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/button_shape"
        android:minHeight="48dp"
        android:text="Valider"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        tools:context=".RegisterSecondActivty"/>
        </LinearLayout>


</LinearLayout>